# CPSTD

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cpai/: README.md  cpai.h
cpaudio/: cpa.h
cplibrary/: cpl.h
cplterminal/: cplt.h
cpstd/: cparena.h  cparr.h  cpbase.h  cpbitarr.h  cphash.h  cplist.h  cpmath.h  cpmemory.h  cppair.h  cpqueue.h  cprng.h  cpsort.h  cpstr.h  cpvec.h  test.c
src/: bird.c  bird_gl.c  cpai_main.c  cpl_main.c  main.c  pendulum.c  pong_gl.c  pong_tui.c  qr_code.c  sort_visual.c  test.c
